--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
 #   - carthage update --platform iOS
 
 script:
-    - xcodebuild -scheme FloatingShowable -sdk iphonesimulator -destination 'platform=iOS Simulator,OS=14.2,name=iPhone 12 Pro' -configuration Debug test | xcpretty -c
+    - xcodebuild -scheme FloatingShowable -sdk iphonesimulator -destination 'platform=iOS Simulator,OS=14.2,name=iPhone 12 Pro' -configuration Debug test | bundle exec xcpretty -c
     - swiftlint
 
 after_success:
